--- a/Sheaft.Api/Sheaft.Api.csproj
+++ b/Sheaft.Api/Sheaft.Api.csproj
@@ -39,4 +39,9 @@
     <ProjectReference Include="..\Sheaft.Mappers\Sheaft.Mappers.csproj" />
     <ProjectReference Include="..\Sheaft.Services\Sheaft.Services.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
