New - Ajout d'une politique de caching des user claims pour éviter les appels trop nombreux vers Identity

--- a/Sheaft.Api/Sheaft.Api.csproj
+++ b/Sheaft.Api/Sheaft.Api.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
     <PackageReference Include="Microsoft.Azure.Search.Data" Version="10.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.6" />
     <PackageReference Include="Microsoft.IdentityModel" Version="7.0.0" />
     <PackageReference Include="Microsoft.Spatial" Version="7.5.3" />
