--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -69,6 +69,11 @@
     "Port": 1434,
     "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
   },
+  "Cache": {
+    "TableName": "CachedItems",
+    "SchemaName": "Cache",
+    "CacheExpirationInMinutes": 30
+  },
   "Cors": {
     "origins": [
       "http://localhost:4200",
