Fix - Modification des AuthOptions pour séparer les Client Identity

--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -41,14 +41,23 @@
     "scheme": "apikey",
     "url": "https://localhost:5001",
     "apiKey": "##REPLACE##",
-    "apiName": "##REPLACE##",
     "actions": {
       "profile": "/account/profile",
       "picture": "/account/picture",
       "delete": "/account/userAccount?userId={0}"
     },
     "caching": true,
-    "cacheDurationInSeconds": 300
+    "cacheDurationInSeconds": 300,
+    "app": {
+      "id": "##REPLACE##",
+      "audience": "##REPLACE##",
+      "secret": "##REPLACE##"
+    },
+    "manage": {
+      "id": "##REPLACE##",
+      "audience": "##REPLACE##",
+      "secret": "##REPLACE##"
+    }
   },
   "SignalR": {
     "scheme": "apikey",
