New - Ajout d'une solution Manage pour gérer les opérations du support

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 Sheaft.Api/appsettings.Development.json
 Sheaft.Signalr/appsettings.Development.json
 Sheaft.Functions/appsettings.Development.json
+Sheaft.Manage/appsettings.Development.json
