--- a/Sheaft.Signalr/appsettings.json
+++ b/Sheaft.Signalr/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Warning"
     }
   },
-  "ApplicationInsights": {
+  "AppInsights": {
     "InstrumentationKey": "##REPLACE##"
   },
   "sendgrid": {
