New - Ajout d'options pour servicebus

--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -115,6 +115,12 @@
     "Key": "##REPLACE##",
     "Url": "DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}"
   },
+  "ServiceBus": {
+    "KeyName": "",
+    "Account": "##REPLACE##",
+    "KeyValue": "##REPLACE##",
+    "Url": "##REPLACE##"
+  },
   "Landing": {
     "newsletterUrl": "/nlregistered",
     "url": "http://localhost:3000"
