New - Ajout du listing des products

--- a/Sheaft.Manage/Sheaft.Manage.csproj
+++ b/Sheaft.Manage/Sheaft.Manage.csproj
@@ -25,4 +25,11 @@
     <ProjectReference Include="..\Sheaft.Options\Sheaft.Options.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Products\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
