New - Ajout de la génération des departments progress

--- a/Sheaft.Functions/appsettings.json
+++ b/Sheaft.Functions/appsettings.json
@@ -86,7 +86,8 @@
       "Products": "products",
       "Jobs": "jobs",
       "Rgpd": "rgpd",
-      "PickingOrders": "picking-orders"
+      "PickingOrders": "picking-orders",
+      "Progress": "progress"
     },
     "Tables": {
       "OrdersReferences": "ordersreferences",
