--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -100,7 +100,8 @@
       "Products": "products",
       "Jobs": "jobs",
       "Rgpd": "rgpd",
-      "PickingOrders": "picking-orders"
+      "PickingOrders": "picking-orders",
+      "Progress": "progress"
     },
     "Tables": {
       "OrdersReferences": "ordersreferences",
