--- a/Sheaft.Functions/Properties/launchSettings.json
+++ b/Sheaft.Functions/Properties/launchSettings.json
@@ -1,7 +1,10 @@
 {
   "profiles": {
     "Sheaft.Functions": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     },
     "Docker": {
       "commandName": "Docker",
