--- a/Sheaft.Options/Sheaft.Options.csproj
+++ b/Sheaft.Options/Sheaft.Options.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sheaft.Core\Sheaft.Core.csproj" />
+  </ItemGroup>
+
 </Project>
