--- a/Sheaft.Services/Sheaft.Services.csproj
+++ b/Sheaft.Services/Sheaft.Services.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.5.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.4.0" />
+    <PackageReference Include="mangopay2-sdk" Version="2.1.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.7" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.7" />
