--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Sheaft.Api/appsettings.Development.json
 Sheaft.Signalr/appsettings.Development.json
 Sheaft.Functions/appsettings.Development.json
 Sheaft.Manage/appsettings.Development.json
+Sheaft.Payment/appsettings.Development.json
