--- a/Sheaft.Payment/appsettings.json
+++ b/Sheaft.Payment/appsettings.json
@@ -18,6 +18,14 @@
       "newsletter": "##REPLACE##"
     }
   },
+  "Psp": {
+    "ApiUrl": "https://api.mangopay.com",
+    "ClientId": "##REPLACE##",
+    "ApiKey": "##REPLACE##",
+    "ReturnUrl": "##REPLACE##",
+    "PaymentUrl": "##REPLACE##",
+    "PaylineUrl": "https://payment.cdn.payline.com"
+  },
   "Sponsoring": {
     "CodeLength": 6,
     "CodeParts": 1
