--- a/Sheaft.Manage/appsettings.json
+++ b/Sheaft.Manage/appsettings.json
@@ -7,6 +7,16 @@
   "ApplicationInsights": {
     "InstrumentationKey": "##REPLACE##"
   },
+  "Psp": {
+    "ApiUrl": "https://api.mangopay.com",
+    "ClientId": "##REPLACE##",
+    "ApiKey": "##REPLACE##",
+    "ReturnUrl": "##REPLACE##",
+    "PaymentUrl": "##REPLACE##",
+    "PaylineUrl": "https://payment.cdn.payline.com",
+    "FixedAmount": 0.18,
+    "Percent": 0.018
+  },
   "sendgrid": {
     "url": "https://api.sendgrid.com/",
     "apiKey": "##REPLACE##",
