--- a/Sheaft.Payment/appsettings.json
+++ b/Sheaft.Payment/appsettings.json
@@ -24,7 +24,9 @@
     "ApiKey": "##REPLACE##",
     "ReturnUrl": "##REPLACE##",
     "PaymentUrl": "##REPLACE##",
-    "PaylineUrl": "https://payment.cdn.payline.com"
+    "PaylineUrl": "https://payment.cdn.payline.com",
+    "FixedAmount": 0.18,
+    "Percent": 0.018
   },
   "Sponsoring": {
     "CodeLength": 6,
