New - Ajout d'une méthode de récupération des fees et modification du createOrder pour calculer la donation

--- a/Sheaft.GraphQL/Sheaft.GraphQL.csproj
+++ b/Sheaft.GraphQL/Sheaft.GraphQL.csproj
@@ -22,5 +22,6 @@
     <ProjectReference Include="..\Sheaft.GraphQL.Sorts\Sheaft.GraphQL.Sorts.csproj" />
     <ProjectReference Include="..\Sheaft.GraphQL.Types\Sheaft.GraphQL.Types.csproj" />
     <ProjectReference Include="..\Sheaft.Localization\Sheaft.Localization.csproj" />
+    <ProjectReference Include="..\Sheaft.Services\Sheaft.Services.csproj" />
   </ItemGroup>
 </Project>
