--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -22,9 +22,10 @@
     "ApiUrl": "https://api.mangopay.com",
     "ClientId": "##REPLACE##",
     "ApiKey": "##REPLACE##",
-    "ReturnUrl": "##REPLACE##",
-    "PaymentUrl": "##REPLACE##",
+    "ReturnUrl": "https://payment.sheaft.com/payments/transaction",
+    "PaymentUrl": "https://payment.sheaft.com/",
     "PaylineUrl": "https://payment.cdn.payline.com",
+    "AppRedirectUrl": "https://localhost:4200/#/cart/checkout?transactionId={transactionId}",
     "FixedAmount": 0.18,
     "Percent": 0.018
   },
