New - Ajout d'une redirection contextualisée sur le site de paiement

--- a/Sheaft.Payment/appsettings.json
+++ b/Sheaft.Payment/appsettings.json
@@ -25,7 +25,9 @@
     "ReturnUrl": "https://payment.sheaft.com/payments/transaction",
     "PaymentUrl": "https://payment.sheaft.com/",
     "PaylineUrl": "https://payment.cdn.payline.com",
-    "AppRedirectUrl": "https://app.sheaft.com/#/cart/checkout?transactionId={transactionId}",
+    "AppRedirectPendingUrl": "https://app.sheaft.com/#/cart/pending?transactionId={transactionId}",
+    "AppRedirectFailedUrl": "https://app.sheaft.com/#/cart/checkout?transactionId={transactionId}",
+    "AppRedirectSuccessUrl": "https://app.sheaft.com/#/cart/success?transactionId={transactionId}",
     "FixedAmount": 0.18,
     "Percent": 0.018
   },
