New - Ajout d'un message d'erreur pour la page checkout de paiement

--- a/Sheaft.Payment/appsettings.json
+++ b/Sheaft.Payment/appsettings.json
@@ -26,7 +26,7 @@
     "PaymentUrl": "https://payment.sheaft.com/",
     "PaylineUrl": "https://payment.cdn.payline.com",
     "AppRedirectPendingUrl": "https://app.sheaft.com/#/cart/pending?transactionId={transactionId}",
-    "AppRedirectFailedUrl": "https://app.sheaft.com/#/cart/checkout?transactionId={transactionId}",
+    "AppRedirectFailedUrl": "https://app.sheaft.com/#/cart/checkout?transactionId={transactionId}&message={message}",
     "AppRedirectSuccessUrl": "https://app.sheaft.com/#/cart/success?transactionId={transactionId}",
     "FixedAmount": 0.18,
     "Percent": 0.018
