--- a/Sheaft.Functions/appsettings.json
+++ b/Sheaft.Functions/appsettings.json
@@ -26,7 +26,27 @@
     "PaymentUrl": "##REPLACE##",
     "PaylineUrl": "https://payment.cdn.payline.com",
     "FixedAmount": 0.18,
-    "Percent": 0.018
+    "Percent": 0.018,
+    "UserId": "##REPLACE##",
+    "WalletId": "##REPLACE##"
+  },
+  "Routines": {
+    "CheckOrdersFromMinutes": 1440,
+    "CheckOrderExpiredFromMinutes": 1440,
+    "CheckPayinsFromMinutes": 30,
+    "CheckPayinExpiredFromMinutes": 60,
+    "CheckNewPayinRefundsFromMinutes": 10080,
+    "CheckPayinRefundsFromMinutes": 60,
+    "CheckPayinRefundExpiredFromMinutes": 2880,
+    "CheckNewPayoutsFromMinutes": 10080,
+    "CheckPayoutsFromMinutes": 60,
+    "CheckPayoutExpiredFromMinutes": 2880,
+    "CheckNewTransfersFromMinutes": 1440,
+    "CheckTransfersFromMinutes": 60,
+    "CheckTransferExpiredFromMinutes": 1440,
+    "CheckNewTransferRefundsFromMinutes": 1440,
+    "CheckTransferRefundsFromMinutes": 60,
+    "CheckTransferRefundExpiredFromMinutes": 2880
   },
   "Sponsoring": {
     "CodeLength": 6,
