New - Ajout de la notion de donation dans la BDD

--- a/Sheaft.Application.Commands/Sheaft.Application.Commands.csproj
+++ b/Sheaft.Application.Commands/Sheaft.Application.Commands.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Sheaft.Application.Models\Sheaft.Application.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Donation\" />
+  </ItemGroup>
+
 </Project>
