--- a/Sheaft.Application.Events/Sheaft.Application.Events.csproj
+++ b/Sheaft.Application.Events/Sheaft.Application.Events.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Sheaft.Domain\Sheaft.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Donation\" />
+  </ItemGroup>
+
 </Project>
