New - Ajout de la gestion des routines de créations de donation

--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -47,7 +47,9 @@
     "CheckTransferExpiredFromMinutes": 1440,
     "CheckNewTransferRefundsFromMinutes": 1440,
     "CheckTransferRefundsFromMinutes": 60,
-    "CheckTransferRefundExpiredFromMinutes": 2880
+    "CheckTransferRefundExpiredFromMinutes": 2880,
+    "CheckDonationsFromMinutes": 60,
+    "CheckDonationExpiredFromMinutes": 1440
   },
   "Sponsoring": {
     "CodeLength": 6,
