Fix - Correction du dockerfile

--- a/Sheaft.Functions/Dockerfile
+++ b/Sheaft.Functions/Dockerfile
@@ -8,10 +8,17 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["Sheaft.Functions/Sheaft.Functions.csproj", "Sheaft.Functions/"]
 COPY ["Sheaft.Core/Sheaft.Core.csproj", "Sheaft.Core/"]
-COPY ["Sheaft.Interop/Sheaft.Interop.csproj", "Sheaft.Interop/"]
-COPY ["Sheaft.Application/Sheaft.Application.csproj", "Sheaft.Application/"]
-COPY ["Sheaft.Services/Sheaft.Services.csproj", "Sheaft.Services/"]
-COPY ["Sheaft.Infrastructure/Sheaft.Infrastructure.csproj", "Sheaft.Infrastructure/"]
+COPY ["Sheaft.Excpetions/Sheaft.Exceptions.csproj", "Sheaft.Exceptions/"]
+COPY ["Sheaft.Localization/Sheaft.Localization.csproj", "Sheaft.Localization/"]
+COPY ["Sheaft.Options/Sheaft.Options.csproj", "Sheaft.Options/"]
+COPY ["Sheaft.Application.Commands/Sheaft.Application.Commands.csproj", "Sheaft.Application.Commands/"]
+COPY ["Sheaft.Application.Events/Sheaft.Application.Events.csproj", "Sheaft.Application.Events/"]
+COPY ["Sheaft.Application.Handlers/Sheaft.Application.Handlers.csproj", "Sheaft.Application.Handlers/"]
+COPY ["Sheaft.Application.Interop/Sheaft.Application.Interop.csproj", "Sheaft.Application.Interop/"]
+COPY ["Sheaft.Application.Mappers/Sheaft.Application.Mappers.csproj", "Sheaft.Application.Mappers/"]
+COPY ["Sheaft.Application.Models/Sheaft.Application.Models.csproj", "Sheaft.Application.Models/"]
+COPY ["Sheaft.Infrastructure.Services/Sheaft.Infrastructure.Services.csproj", "Sheaft.Infrastructure.Services/"]
+COPY ["Sheaft.Infrastructure.Persistence/Sheaft.Infrastructure.Persistence.csproj", "Sheaft.Infrastructure.Persistence/"]
 COPY ["Sheaft.Domain/Sheaft.Domain.csproj", "Sheaft.Domain/"]
 RUN dotnet restore "Sheaft.Functions/Sheaft.Functions.csproj"
 COPY . .
