--- a/azure-pipelines-api.yml
+++ b/azure-pipelines-api.yml
@@ -16,14 +16,14 @@ pool:
 steps:
   - script: |
       dotnet restore $(System.DefaultWorkingDirectory)/Sheaft.sln
-      dotnet publish $(System.DefaultWorkingDirectory)/Sheaft.Api/Sheaft.Api.csproj --configuration Release --output publish_output/Sheaft.Api/
+      dotnet publish $(System.DefaultWorkingDirectory)/Sheaft.Web.Api/Sheaft.Web.Api.csproj --configuration Release --output publish_output/Sheaft.Web.Api/
   - task: ArchiveFiles@2
     displayName: "Archive files"
     inputs:
-      rootFolderOrFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Api"
+      rootFolderOrFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Api"
       includeRootFolder: false
-      archiveFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Api/build$(Build.BuildId).zip"
+      archiveFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Api/build$(Build.BuildId).zip"
   - task: PublishBuildArtifacts@1
     inputs:
-      PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Api/build$(Build.BuildId).zip'
+      PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Api/build$(Build.BuildId).zip'
       artifactName: 'sheaft-api'
