--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,15 +15,15 @@ pool:
 
 steps:
   - script: |
-      dotnet restore $(System.DefaultWorkingDirectory)/Sheaft.Payment/Sheaft.Payment.csproj
-      dotnet publish $(System.DefaultWorkingDirectory)/Sheaft.Payment/Sheaft.Payment.csproj --configuration Release --output publish_output/Sheaft.Payment/
+      dotnet restore $(System.DefaultWorkingDirectory)/Sheaft.Payment/Sheaft.Web.Payment.csproj
+      dotnet publish $(System.DefaultWorkingDirectory)/Sheaft.Payment/Sheaft.Web.Payment.csproj --configuration Release --output publish_output/Sheaft.Web.Payment/
   - task: ArchiveFiles@2
     displayName: "Archive files"
     inputs:
-      rootFolderOrFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Payment"
+      rootFolderOrFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Payment"
       includeRootFolder: false
-      archiveFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Payment/build$(Build.BuildId).zip"
+      archiveFile: "$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Payment/build$(Build.BuildId).zip"
   - task: PublishBuildArtifacts@1
     inputs:
-      PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Payment/build$(Build.BuildId).zip'
+      PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Payment/build$(Build.BuildId).zip'
       artifactName: 'sheaft-payment'
