--- a/Sheaft.Application.Commands/Sheaft.Application.Commands.csproj
+++ b/Sheaft.Application.Commands/Sheaft.Application.Commands.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sheaft.Application.Interop\Sheaft.Application.Interop.csproj" />
     <ProjectReference Include="..\Sheaft.Application.Models\Sheaft.Application.Models.csproj" />
   </ItemGroup>
 
