Update - Utilisation de settings pour les templateid

--- a/Sheaft.Application.Interop/Sheaft.Application.Interop.csproj
+++ b/Sheaft.Application.Interop/Sheaft.Application.Interop.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sheaft.Application.Models\Sheaft.Application.Models.csproj" />
+    <ProjectReference Include="..\Sheaft.Options\Sheaft.Options.csproj" />
   </ItemGroup>
 
 </Project>
