Update - Ajout des events de purchaseorder et de paiements

--- a/Sheaft.Application.Events/Sheaft.Application.Events.csproj
+++ b/Sheaft.Application.Events/Sheaft.Application.Events.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\Sheaft.Domain\Sheaft.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Consumer\" />
+    <Folder Include="Store\" />
+  </ItemGroup>
+
 </Project>
