--- a/Sheaft.Web.Signalr/Properties/launchSettings.json
+++ b/Sheaft.Web.Signalr/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "api": {
+    "signalr": {
       "commandName": "Project",
       "applicationUrl": "https://localhost:5010;http://localhost:5009",
       "environmentVariables": {
