--- a/Sheaft.Web.Manage/appsettings.json
+++ b/Sheaft.Web.Manage/appsettings.json
@@ -17,16 +17,13 @@
     "FixedAmount": 0.18,
     "Percent": 0.018
   },
-  "sendgrid": {
-    "url": "https://api.sendgrid.com/",
+  "mailer": {
     "apiKey": "##REPLACE##",
     "sender": {
       "email": "##REPLACE##@##REPLACE##.##REPLACE##",
       "name": "##REPLACE##"
     },
-    "groups": {
-      "newsletter": "##REPLACE##"
-    }
+    "bounces": "##REPLACE##"
   },
   "Sponsoring": {
     "CodeLength": 6,
