--- a/Sheaft.Web.Jobs/appsettings.json
+++ b/Sheaft.Web.Jobs/appsettings.json
@@ -7,16 +7,13 @@
   "AppInsights": {
     "InstrumentationKey": "##REPLACE##"
   },
-  "sendgrid": {
-    "url": "https://api.sendgrid.com/",
+  "mailer": {
     "apiKey": "##REPLACE##",
     "sender": {
       "email": "##REPLACE##@##REPLACE##.##REPLACE##",
       "name": "##REPLACE##"
     },
-    "groups": {
-      "newsletter": "##REPLACE##"
-    }
+    "bounces": "##REPLACE##"
   },
   "Psp": {
     "ApiUrl": "https://api.mangopay.com",
