New - Ajout de Serilog et NewRelic pour le tracing (suppression d'appInsights)

--- a/Sheaft.Web.Payment/appsettings.json
+++ b/Sheaft.Web.Payment/appsettings.json
@@ -222,5 +222,11 @@
       "id": "##REPLACE##",
       "value": "##REPLACE##"
     }
-  }
+  },
+  "NEW_RELIC_LOG_API": "https://log-api.eu.newrelic.com/log/v1",
+  "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
+  "NEW_RELIC_INSERT_KEY": "##REPLACE##",
+  "NEW_RELIC_APP_NAME": "PAYMENT",
+  "NEW_RELIC_BATCH_SIZE": "100",
+  "NEW_RELIC_LOG_LEVEL": "Warning"
 }
