--- a/Sheaft.Web.Api/appsettings.json
+++ b/Sheaft.Web.Api/appsettings.json
@@ -239,5 +239,11 @@
       "id": "##REPLACE##",
       "value": "##REPLACE##"
     }
-  }
+  },
+  "NEW_RELIC_LOG_API": "https://log-api.eu.newrelic.com/log/v1",
+  "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
+  "NEW_RELIC_INSERT_KEY": "##REPLACE##",
+  "NEW_RELIC_APP_NAME": "API",
+  "NEW_RELIC_BATCH_SIZE": "100",
+  "NEW_RELIC_LOG_LEVEL": "Warning"
 }
