--- a/Sheaft.Web.Payment/Sheaft.Web.Payment.csproj
+++ b/Sheaft.Web.Payment/Sheaft.Web.Payment.csproj
@@ -9,8 +9,15 @@
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.14" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.7.14" />
     <PackageReference Include="mangopay2-sdk" Version="2.1.6" />
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
+    <PackageReference Include="NewRelic.Agent" Version="8.33.0" />
+    <PackageReference Include="NewRelic.Agent.Api" Version="8.33.0" />
+    <PackageReference Include="NewRelic.LogEnrichers.Serilog" Version="1.0.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.NewRelic.Logs" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
