--- a/Sheaft.Web.Signalr/appsettings.json
+++ b/Sheaft.Web.Signalr/appsettings.json
@@ -194,5 +194,11 @@
       "id": "##REPLACE##",
       "value": "##REPLACE##"
     }
-  }
+  },
+  "NEW_RELIC_LOG_API": "https://log-api.eu.newrelic.com/log/v1",
+  "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
+  "NEW_RELIC_INSERT_KEY": "##REPLACE##",
+  "NEW_RELIC_APP_NAME": "SIGNALR",
+  "NEW_RELIC_BATCH_SIZE": "100",
+  "NEW_RELIC_LOG_LEVEL": "Warning"
 }
