--- a/Sheaft.Web.Api/appsettings.json
+++ b/Sheaft.Web.Api/appsettings.json
@@ -1,7 +1,62 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs" ],
+    "LevelSwitches": { "$controlSwitch": "Verbose" },
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting": "Information",
+        "Serilog.AspNetCore": "Warning",
+        "System": "Warning",
+        "Hangfire": "Warning"
+      }
+    },
+    "WriteTo:Async": {
+      "Name": "Async",
+      "Args": {
+        "configure": [
+          {
+            "Name": "NewRelicLogs",
+            "Args": {
+              "endpointUrl": "https://log-api.eu.newrelic.com/log/v1",
+              "applicationName": "API",
+              "licenseKey": "##REPLACE##",
+              "insertKey": "##REPLACE##",
+              "restrictedToMinimumLevel": "Information",
+              "batchSizeLimit": "250"
+            }
+          }
+        ]
+      }
+    },
+    "WriteTo:Sublogger": {
+      "Name": "Logger",
+      "Args": {
+        "configureLogger": {
+          "MinimumLevel": "Verbose",
+          "WriteTo": [
+            {
+              "Name": "Console",
+              "Args": {
+                "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
+                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+              }
+            }
+          ]
+        },
+        "restrictedToMinimumLevel": "Verbose",
+        "levelSwitch": "$controlSwitch"
+      }
+    },
+    "Enrich": [
+      "WithNewRelicLogsInContext"
+    ]
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Microsoft": "Warning"
     }
   },
   "AppInsights": {
@@ -239,11 +294,5 @@
       "id": "##REPLACE##",
       "value": "##REPLACE##"
     }
-  },
-  "NEW_RELIC_LOG_API": "https://log-api.eu.newrelic.com/log/v1",
-  "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
-  "NEW_RELIC_INSERT_KEY": "##REPLACE##",
-  "NEW_RELIC_APP_NAME": "API",
-  "NEW_RELIC_BATCH_SIZE": "100",
-  "NEW_RELIC_LOG_LEVEL": "Warning"
+  }
 }
