--- a/Sheaft.Web.Signalr/appsettings.json
+++ b/Sheaft.Web.Signalr/appsettings.json
@@ -12,43 +12,45 @@
         "Hangfire": "Warning"
       }
     },
-    "WriteTo:Async": {
-      "Name": "Async",
-      "Args": {
-        "configure": [
-          {
-            "Name": "NewRelicLogs",
-            "Args": {
-              "endpointUrl": "https://log-api.eu.newrelic.com/log/v1",
-              "applicationName": "SIGNALR",
-              "licenseKey": "##REPLACE##",
-              "insertKey": "##REPLACE##",
-              "restrictedToMinimumLevel": "Information",
-              "batchSizeLimit": "250"
-            }
-          }
-        ]
-      }
-    },
-    "WriteTo:Sublogger": {
-      "Name": "Logger",
-      "Args": {
-        "configureLogger": {
-          "MinimumLevel": "Verbose",
-          "WriteTo": [
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
             {
-              "Name": "Console",
+              "Name": "NewRelicLogs",
               "Args": {
-                "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
-                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+                "endpointUrl": "https://log-api.eu.newrelic.com/log/v1",
+                "applicationName": "SIGNALR",
+                "licenseKey": "",
+                "insertKey": "",
+                "restrictedToMinimumLevel": "Information",
+                "batchSizeLimit": "250"
               }
             }
           ]
-        },
-        "restrictedToMinimumLevel": "Verbose",
-        "levelSwitch": "$controlSwitch"
+        }
+      },
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "MinimumLevel": "Verbose",
+            "WriteTo": [
+              {
+                "Name": "Console",
+                "Args": {
+                  "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
+                  "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
+                }
+              }
+            ]
+          },
+          "restrictedToMinimumLevel": "Verbose",
+          "levelSwitch": "$controlSwitch"
+        }
       }
-    },
+    ],
     "Enrich": [
       "WithNewRelicLogsInContext"
     ]
